# XCSP3-CPP-Parser

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/: XCSP3CoreParser.h  XCSP3Manager.h  XCSP3TreeNode.h
src/: XCSP3CoreParser.cc
